--- a/Zoo/Zoo.vcxproj.filters
+++ b/Zoo/Zoo.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="Animal.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Penguin.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
