--- a/Zoo/Zoo.vcxproj.filters
+++ b/Zoo/Zoo.vcxproj.filters
@@ -26,5 +26,11 @@
     <ClInclude Include="Penguin.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Elephant.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="All.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
