--- a/Zoo/Zoo.vcxproj
+++ b/Zoo/Zoo.vcxproj
@@ -130,7 +130,9 @@
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="All.h" />
     <ClInclude Include="Animal.h" />
+    <ClInclude Include="Elephant.h" />
     <ClInclude Include="Penguin.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
