--- a/Zoo/Zoo.vcxproj.filters
+++ b/Zoo/Zoo.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="All.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Parrot.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
