--- a/Zoo/Zoo.vcxproj
+++ b/Zoo/Zoo.vcxproj
@@ -133,6 +133,7 @@
     <ClInclude Include="All.h" />
     <ClInclude Include="Animal.h" />
     <ClInclude Include="Elephant.h" />
+    <ClInclude Include="Parrot.h" />
     <ClInclude Include="Penguin.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
