--- a/Zoo/Zoo.vcxproj
+++ b/Zoo/Zoo.vcxproj
@@ -132,6 +132,7 @@
   <ItemGroup>
     <ClInclude Include="All.h" />
     <ClInclude Include="Animal.h" />
+    <ClInclude Include="Dog.h" />
     <ClInclude Include="Elephant.h" />
     <ClInclude Include="Parrot.h" />
     <ClInclude Include="Penguin.h" />
