--- a/Zoo/Zoo.vcxproj.filters
+++ b/Zoo/Zoo.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="Parrot.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Dog.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
