--- a/Zoo/Zoo.vcxproj
+++ b/Zoo/Zoo.vcxproj
@@ -132,8 +132,11 @@
   <ItemGroup>
     <ClInclude Include="All.h" />
     <ClInclude Include="Animal.h" />
+    <ClInclude Include="Bird.h" />
     <ClInclude Include="Dog.h" />
     <ClInclude Include="Elephant.h" />
+    <ClInclude Include="Fish.h" />
+    <ClInclude Include="Dolphin.h" />
     <ClInclude Include="Parrot.h" />
     <ClInclude Include="Penguin.h" />
   </ItemGroup>
